--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,6 +6,7 @@
 #
 appdirs==1.4.3            # via black, virtualenv
 astroid==2.3.3            # via pylint
+atomicwrites==1.4.0       # via pytest
 attrs==19.3.0             # via black, jsonschema, pytest
 backcall==0.1.0           # via ipython
 bandit==1.6.2             # via -r requirements-dev.in
@@ -13,8 +14,10 @@ black==19.10b0            # via -r requirements-dev.in
 bleach==3.1.4             # via nbconvert
 blessings==1.7            # via gpustat
 certifi==2019.11.28       # via -c requirements.txt, pipenv, requests, sentry-sdk
+cffi==1.14.2              # via gevent
 chardet==3.0.4            # via -c requirements.txt, requests
 click==7.1.1              # via -c requirements.txt, black, safety, wandb
+colorama==0.4.3           # via bandit, ipython, pylint, pytest
 configparser==5.0.0       # via wandb
 cycler==0.10.0            # via matplotlib
 decorator==4.4.2          # via ipython, traitlets
@@ -69,7 +72,6 @@ parso==0.6.2              # via jedi
 pathspec==0.7.0           # via black
 pathtools==0.1.2          # via watchdog
 pbr==5.4.4                # via stevedore
-pexpect==4.8.0            # via ipython
 pickleshare==0.7.5        # via ipython
 pillow==7.0.0             # via -r requirements-dev.in
 pipenv==2018.11.26        # via dparse
@@ -78,9 +80,9 @@ prometheus-client==0.7.1  # via notebook
 promise==2.3              # via gql, graphql-core
 prompt-toolkit==3.0.5     # via ipython
 psutil==5.7.0             # via gpustat, wandb
-ptyprocess==0.6.0         # via pexpect, terminado
 py==1.8.1                 # via pytest
 pycodestyle==2.5.0        # via -r requirements-dev.in
+pycparser==2.20           # via cffi
 pydocstyle==5.0.2         # via -r requirements-dev.in
 pygments==2.6.1           # via ipython, nbconvert
 pylint==2.4.4             # via -r requirements-dev.in
@@ -88,6 +90,8 @@ pyparsing==2.4.6          # via matplotlib, packaging
 pyrsistent==0.16.0        # via jsonschema
 pytest==5.4.1             # via -r requirements-dev.in
 python-dateutil==2.8.1    # via jupyter-client, matplotlib, wandb
+pywin32==228              # via jupyter-core
+pywinpty==0.5.7           # via terminado
 pyyaml==5.3.1             # via -r requirements-dev.in, bandit, dparse, wandb
 pyzmq==19.0.0             # via jupyter-client, notebook
 redis==3.4.1              # via redlock-py
